--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-countdown-circle-timer": "^2.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "Router": "^2.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
