--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npm i && node index.js",
     "client": "npm run start --prefix ../client"
   },
   "keywords": [],
